src/components/k8s/pcn_k8s/networkpolicies/test/ingress/limit-namespace/policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-limit-namespace
  namespace: pcn-test-default-ns
spec:
  podSelector:
    matchLabels:
      app: target
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            role: first  
        podSelector:
          matchLabels:
            purpose: allowed
